Finally fixing the squished inputs

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -86,7 +86,7 @@ input {
 	width: 100%;
 	box-shadow: 3px 3px #6b7280;
 	border: #6b7280 solid;
-	height: 25px;
+	height: 50px;
 }
 
 .btn-disabled {
